ghc-4335c07/testsuite/tests/patsyn/should_fail/T12819.hs
{-# LANGUAGE PatternSynonyms, ViewPatterns, TypeFamilies, KindSignatures #-}

module T12819 where

type family F a  -- F :: * -> *
data T :: (* -> *) -> *

pattern Q :: T F -> String
pattern Q x <- (undefined -> x)
